--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@google-cloud/text-to-speech": "^6.1.0",
-    "@langchain/core": "^0.3.55",
+    "@langchain/community": "^0.3.43",
+    "@langchain/core": "^0.3.56",
     "@langchain/openai": "^0.5.10",
     "@mendable/firecrawl-js": "^1.21.1",
     "@prisma/client": "^6.7.0",
@@ -22,6 +22,7 @@
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/pg": "^8.15.1",
+    "@types/ws": "^8.18.1",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
@@ -32,6 +33,7 @@
     "pg": "^8.15.6",
     "say": "^0.16.0",
     "simple-git": "^3.27.0",
+    "ws": "^8.18.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
@@ -39,5 +41,6 @@
     "prisma": "^6.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
-  }
+  },
+  "description": ""
 }
